cahnged hero hight to a min height to prevent overlap with max or set height

--- a/src/homeSections/hero/Hero.css
+++ b/src/homeSections/hero/Hero.css
@@ -22,7 +22,7 @@
  .hero {
   @apply overflow-hidden relative w-full 
   flex flex-col md:flex-row items-center justify-start 
-  md:h-section-height md:min-h-108;
+  min-h-section-height  md:min-h-108;
 }
 
 /* Hero image wrapper */
